fix: remove overflow hidden from container

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  overflow: hidden;
 }
 
 /* ---------------------------------------------------------------------------
